<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="wrap_content"
  android:layout_height="wrap_content"
  android:orientation="vertical"
  android:gravity="center_horizontal">
  
  <EditText
  	android:id="@+id/et_oldpwd"
  	android:layout_width="180dp"
  	android:layout_height="wrap_content"
  	android:layout_marginTop = "2dp"
  	android:singleLine="true"
  	android:hint="@string/input_oldpwd"
  />
  <EditText
  	android:id="@+id/et_newpwd"
  	android:layout_width="180dp"
  	android:layout_height="wrap_content"
  	android:layout_marginTop = "2dp"
  	android:singleLine="true"
  	android:hint="@string/input_newpwd"
  />
  <EditText
  	android:id="@+id/et_repeatpwd"
  	android:layout_width="180dp"
  	android:layout_height="wrap_content"
  	android:layout_marginTop = "2dp"
  	android:singleLine="true"
  	android:hint="@string/input_repeatpwd"
  />
</LinearLayout>
