<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:orientation="vertical"
  android:background="@drawable/bg_1">
  <RelativeLayout 
    android:id="@+id/ly_top"
    android:layout_width="fill_parent"
	android:layout_height="60dp"
	android:layout_alignParentTop="true"
	android:background="@drawable/top_bg">
    <TextView 
        android:id="@+id/id_module"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"  
        android:layout_centerInParent="true"    
        android:gravity="center"
        android:text="@string/module_3"
        android:textColor="@color/black"
        android:background="@drawable/app_label"/>
  </RelativeLayout>
  
  <TextView 
    android:id="@+id/tv_name"
    android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:layout_marginTop="5dp"
	android:layout_marginLeft="10dp"
	android:textColor="@color/black"
    />  
  <ImageView 
    android:id="@+id/img_logo"
    android:layout_width="48dp"
	android:layout_height="48dp"
	android:layout_marginLeft="10dp"
	android:background="@drawable/app_icon"
      />   
      
  <TextView 
    android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:layout_marginTop="20dp"
	android:layout_marginLeft="10dp"
	android:text="@string/unlock_tip"
	android:textColor="@color/black"/>  
      
    <EditText 
        android:id="@+id/et_pwd"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
		android:layout_marginTop="20dp"
		android:layout_marginLeft="10dp"
        android:hint="@string/input_pwd"
        android:textColor="@color/black"
        />
    <Button 
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:layout_marginTop="20dp"
		android:layout_marginLeft="10dp"
        android:text="@string/unlock_app"
        android:textSize="15sp"
        android:background="@drawable/btn_bg"
        />
    <Button 
        android:id="@+id/btn_pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:layout_marginTop="20dp"
		android:layout_marginLeft="10dp"
        android:text="@string/modify_pwd"
        android:background="@drawable/btn_bg"
        />
</LinearLayout>    