<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:background="@drawable/bg_1">
  <RelativeLayout 
    android:id="@+id/ly_top"
    android:layout_width="fill_parent"
	android:layout_height="60dp"
	android:layout_alignParentTop="true"
	android:background="@drawable/top_bg">
    <TextView 
        android:id="@+id/id_module"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"  
        android:layout_centerInParent="true"      
        android:gravity="center"
        android:text="@string/module_0"
        android:textColor="@color/black"
        android:background="@drawable/app_label"/>
    <TextView 
        android:id="@+id/tv_internal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/size_internal"
        android:textColor="@color/white"
        android:textSize="10sp"/>
  </RelativeLayout>
  <LinearLayout 
    android:id="@+id/ly_bottom"
	android:orientation="horizontal" 
	android:layout_width="fill_parent"
	android:layout_alignParentBottom="true"
	android:layout_height="60dip"
	android:gravity="center">
		<Button 
		    android:id="@+id/show_all" 
		    android:layout_weight="1"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:background="@drawable/btn_bg"
			android:text="@string/show_all"/>	
		<Button 
		    android:id="@+id/show_third_apps"
		    android:layout_weight="1"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:background="@drawable/btn_bg"
			android:text="@string/show_third_apps"/>	
		<Button 
		    android:id="@+id/show_sys_apps"
		    android:layout_weight="1"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:background="@drawable/btn_bg"
			android:text="@string/show_sys_apps"/>						
	</LinearLayout>
  	<FrameLayout 
  	  android:id="@+id/ly_content"
      android:layout_width="fill_parent"
	  android:layout_height="fill_parent"
	  android:layout_above="@id/ly_bottom"
	  android:layout_below="@id/ly_top"
      >
      <LinearLayout
        android:id="@+id/layout_loading"
      	android:layout_width="wrap_content"
	  	android:layout_height="wrap_content"
	  	android:orientation="horizontal"
	  	android:layout_gravity="center"
	  	android:visibility="invisible"
          >
          <ProgressBar 
            android:layout_width="wrap_content"
	  		android:layout_height="wrap_content"
          />
          <TextView 
             android:layout_width="wrap_content"
	  		android:layout_height="wrap_content"
	  		android:layout_marginLeft="3dp"
	  		android:layout_gravity="center_vertical"
	  		android:text="@string/loading"
	  		android:textSize="20sp"
	  		android:textColor="@color/white"
          />
      </LinearLayout>
	<ListView
	    android:id="@+id/listview_show"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:cacheColorHint="@color/transparent"		
		android:fadingEdge="none"
		/>
  </FrameLayout>
</RelativeLayout>


