<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:orientation="vertical"
  android:background="@drawable/bg_1">
  <RelativeLayout 
    android:id="@+id/ly_top"
    android:layout_width="fill_parent"
	android:layout_height="60dp"
	android:layout_alignParentTop="true"
	android:background="@drawable/top_bg">
    <TextView 
        android:id="@+id/id_module"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"  
        android:layout_centerInParent="true"    
        android:gravity="center"
        android:text="@string/module_2"
        android:textColor="@color/black"
        android:background="@drawable/app_label"/>
  </RelativeLayout>
  
    <Button 
        android:id="@+id/btn_backup_sms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:layout_marginTop="20dp"
		android:layout_marginLeft="10dp"
        android:text="@string/backup_sms"
        android:textSize="15sp"
        android:background="@drawable/btn_bg"
        />
    <Button 
        android:id="@+id/btn_recovery_sms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:layout_marginTop="20dp"
		android:layout_marginLeft="10dp"
        android:text="@string/recovery_sms"
        android:background="@drawable/btn_bg"
        />
</LinearLayout>    